force-app/main/default/objects/DocumentDetail__c/DocumentDetail__c.object-meta.xml
<CustomObject>
    <description>Holds the Document related data</description>
    <label>Document Detail</label>
    <nameField>
        
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        
        <label>Document Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Document Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>