force-app/main/default/objects/DocumentDetail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the related account for which the document was uploaded</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Document Details</relationshipLabel>
    <relationshipName>Document_Details</relationshipName>
    <type>Lookup</type>
</CustomField>