force-app/main/default/objects/DocumentDetail__c/fields/ApplicationNumber__c.field-meta.xml
<CustomField>
    <fullName>ApplicationNumber__c</fullName>
    <description>Application Number for which document for RFI to be uploaded</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>