force-app/main/default/objects/DocumentDetail__c/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <description>Case Number for which document for RFI to be uploaded</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>