force-app/main/default/objects/DocumentDetail__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>Store the Document Content Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>