force-app/main/default/objects/DocumentDetail__c/fields/Document_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>