force-app/main/default/objects/DocumentDetail__c/fields/DocumentMetadataId__c.field-meta.xml
<CustomField>
    <fullName>DocumentMetadataId__c</fullName>
    <description>Document Id will store in DMS</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Doucment Metadata Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>