force-app/main/default/objects/DocumentDetail__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>Indicates whether the document uploaded is a Application Form, Welcome Packet, Reference Guide, FAQs, Policy, Brochure, Poster, Video or Training Materials</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Application Form</fullName>
                
                
                    <label>Application Form</label>
                
                </value>
            
                <value>
                
                    <fullName>Welcome Packet</fullName>
                
                
                    <label>Welcome Packet</label>
                
                </value>
            
                <value>
                
                    <fullName>Reference Guide</fullName>
                
                
                    <label>Reference Guide</label>
                
                </value>
            
                <value>
                
                    <fullName>FAQs</fullName>
                
                
                    <label>FAQs</label>
                
                </value>
            
                <value>
                
                    <fullName>Policy</fullName>
                
                
                    <label>Policy</label>
                
                </value>
            
                <value>
                
                    <fullName>Brochure</fullName>
                
                
                    <label>Brochure</label>
                
                </value>
            
                <value>
                
                    <fullName>Poster</fullName>
                
                
                    <label>Poster</label>
                
                </value>
            
                <value>
                
                    <fullName>Video</fullName>
                
                
                    <label>Video</label>
                
                </value>
            
                <value>
                
                    <fullName>Training Materials</fullName>
                
                
                    <label>Training Materials</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>