force-app/main/default/objects/DocumentDetail__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Document Extension</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>