force-app/main/default/objects/DocumentDetail__c/fields/FailureReason__c.field-meta.xml
<CustomField>
    <fullName>FailureReason__c</fullName>
    <description>Used to store failure reason like virus scan failed, doc password protected</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>