force-app/main/default/objects/DocumentDetail__c/fields/FileId__c.field-meta.xml
<CustomField>
    <fullName>FileId__c</fullName>
    <description>Stores the Uploaded file Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>File Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>