force-app/main/default/objects/DocumentDetail__c/fields/Form_of_Proof__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Proof__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Form of Proof</label>
    <length>55</length>
    <type>Text</type>
</CustomField>