force-app/main/default/objects/DocumentDetail__c/fields/Hearing_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Document_Type__c</fullName>
    <label>Hearing Document Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>DT150</fullName>
                
                
                    <label>Acknowledgement Letter-Medicaid Hearing Request</label>
                
                </value>
            
                <value>
                
                    <fullName>DT151</fullName>
                
                
                    <label>AUDIO recording PHC</label>
                
                </value>
            
                <value>
                
                    <fullName>DT152</fullName>
                
                
                    <label>Certification of Record</label>
                
                </value>
            
                <value>
                
                    <fullName>DT153</fullName>
                
                
                    <label>Exhibits-Agency</label>
                
                </value>
            
                <value>
                
                    <fullName>DT154</fullName>
                
                
                    <label>Exhibits-Appellants</label>
                
                </value>
            
                <value>
                
                    <fullName>DT155</fullName>
                
                
                    <label>HEARING AUDIO recording</label>
                
                </value>
            
                <value>
                
                    <fullName>DT156</fullName>
                
                
                    <label>Memo or Brief</label>
                
                </value>
            
                <value>
                
                    <fullName>DT157</fullName>
                
                
                    <label>Recommended Order - Dismissed</label>
                
                </value>
            
                <value>
                
                    <fullName>DT158</fullName>
                
                
                    <label>Recommended Order - Overturned in part</label>
                
                </value>
            
                <value>
                
                    <fullName>DT159</fullName>
                
                
                    <label>Recommended Order - Remand</label>
                
                </value>
            
                <value>
                
                    <fullName>DT160</fullName>
                
                
                    <label>Request for Certification of Record</label>
                
                </value>
            
                <value>
                
                    <fullName>DT161</fullName>
                
                
                    <label>Request for Hearing to be Converted to In-Person</label>
                
                </value>
            
                <value>
                
                    <fullName>DT162</fullName>
                
                
                    <label>Request for Subpoena</label>
                
                </value>
            
                <value>
                
                    <fullName>DT163</fullName>
                
                
                    <label>Request to Reschedule</label>
                
                </value>
            
                <value>
                
                    <fullName>DT164</fullName>
                
                
                    <label>RETURN Receipt</label>
                
                </value>
            
                <value>
                
                    <fullName>DT165</fullName>
                
                
                    <label>Returned 1st class mail</label>
                
                </value>
            
                <value>
                
                    <fullName>DT166</fullName>
                
                
                    <label>Subpoena</label>
                
                </value>
            
                <value>
                
                    <fullName>DT167</fullName>
                
                
                    <label>Summons</label>
                
                </value>
            
                <value>
                
                    <fullName>DT168</fullName>
                
                
                    <label>Recommended order - Waiver</label>
                
                </value>
            
                <value>
                
                    <fullName>DT092</fullName>
                
                
                    <label>PAFS-78.1 Administrative Hearing Summary</label>
                
                </value>
            
                <value>
                
                    <fullName>DT131</fullName>
                
                
                    <label>FS-80A Individual Waives Right to SNAP ADH and Accept Disqualition Penalty</label>
                
                </value>
            
                <value>
                
                    <fullName>DT021</fullName>
                
                
                    <label>Exception</label>
                
                </value>
            
                <value>
                
                    <fullName>DT137</fullName>
                
                
                    <label>Notice of Hearing</label>
                
                </value>
            
                <value>
                
                    <fullName>DT138</fullName>
                
                
                    <label>Recommended Order - Affirmed</label>
                
                </value>
            
                <value>
                
                    <fullName>DT139</fullName>
                
                
                    <label>Prehearing Order</label>
                
                </value>
            
                <value>
                
                    <fullName>DT142</fullName>
                
                
                    <label>Final Order</label>
                
                </value>
            
                <value>
                
                    <fullName>DT143</fullName>
                
                
                    <label>Acknowledgement Letter-Exception</label>
                
                </value>
            
                <value>
                
                    <fullName>DT003</fullName>
                
                
                    <label>Amended</label>
                
                </value>
            
                <value>
                
                    <fullName>DT008</fullName>
                
                
                    <label>Court of Appeals Decision</label>
                
                </value>
            
                <value>
                
                    <fullName>DT020</fullName>
                
                
                    <label>Entry of Appearance</label>
                
                </value>
            
                <value>
                
                    <fullName>DT026</fullName>
                
                
                    <label>Interim Order</label>
                
                </value>
            
                <value>
                
                    <fullName>DT033</fullName>
                
                
                    <label>Circuit Court Decision</label>
                
                </value>
            
                <value>
                
                    <fullName>DT036</fullName>
                
                
                    <label>Letter - Withdrawing</label>
                
                </value>
            
                <value>
                
                    <fullName>DT046</fullName>
                
                
                    <label>Motion for Continuance</label>
                
                </value>
            
                <value>
                
                    <fullName>DT047</fullName>
                
                
                    <label>Motion for Extension of Time</label>
                
                </value>
            
                <value>
                
                    <fullName>DT048</fullName>
                
                
                    <label>Motion for Postponement</label>
                
                </value>
            
                <value>
                
                    <fullName>DT049</fullName>
                
                
                    <label>Motion for Prehearing Conference</label>
                
                </value>
            
                <value>
                
                    <fullName>DT061</fullName>
                
                
                    <label>Motion to Withdraw</label>
                
                </value>
            
                <value>
                
                    <fullName>DT068</fullName>
                
                
                    <label>Notice of Reassignment</label>
                
                </value>
            
                <value>
                
                    <fullName>DT075</fullName>
                
                
                    <label>Open Records Request</label>
                
                </value>
            
                <value>
                
                    <fullName>DT081</fullName>
                
                
                    <label>Order Granting</label>
                
                </value>
            
                <value>
                
                    <fullName>DT082</fullName>
                
                
                    <label>Order of Abeyance</label>
                
                </value>
            
                <value>
                
                    <fullName>DT084</fullName>
                
                
                    <label>Order of Dismissal</label>
                
                </value>
            
                <value>
                
                    <fullName>DT085</fullName>
                
                
                    <label>Order Rescheduling</label>
                
                </value>
            
                <value>
                
                    <fullName>DT086</fullName>
                
                
                    <label>Order Scheduling Hearing</label>
                
                </value>
            
                <value>
                
                    <fullName>DT089</fullName>
                
                
                    <label>Order to Show Cause</label>
                
                </value>
            
                <value>
                
                    <fullName>DT090</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
                <value>
                
                    <fullName>DT103</fullName>
                
                
                    <label>Prehearing Notice</label>
                
                </value>
            
                <value>
                
                    <fullName>DT114</fullName>
                
                
                    <label>Request for Hearing</label>
                
                </value>
            
                <value>
                
                    <fullName>DT116</fullName>
                
                
                    <label>Response to Show Cause Order</label>
                
                </value>
            
                <value>
                
                    <fullName>DT119</fullName>
                
                
                    <label>Returned Notice of Hearing Envelope</label>
                
                </value>
            
                <value>
                
                    <fullName>DT120</fullName>
                
                
                    <label>RETURN certified mail</label>
                
                </value>
            
                <value>
                
                    <fullName>DT123</fullName>
                
                
                    <label>Status Report</label>
                
                </value>
            
                <value>
                
                    <fullName>DT128</fullName>
                
                
                    <label>Supreme Court Decision</label>
                
                </value>
            
                <value>
                
                    <fullName>DT129</fullName>
                
                
                    <label>Witness and/or Exhibit List</label>
                
                </value>
            
                <value>
                
                    <fullName>DT146</fullName>
                
                
                    <label>Recommended Order - Reversed</label>
                
                </value>
            
                <value>
                
                    <fullName>DT147</fullName>
                
                
                    <label>Recommended Order- Default</label>
                
                </value>
            
                <value>
                
                    <fullName>DT148</fullName>
                
                
                    <label>Recommended Order - Withdrawn</label>
                
                </value>
            
                <value>
                
                    <fullName>DT149</fullName>
                
                
                    <label>Recommended Order- No Service</label>
                
                </value>
            
                <value>
                
                    <fullName>ROD</fullName>
                
                
                    <label>Recommended Order - Draft</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>