force-app/main/default/objects/DocumentDetail__c/fields/Hearing_Id__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hearing Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>