force-app/main/default/objects/DocumentDetail__c/fields/Hearing_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Request_Number__c</fullName>
    <description>Hearing request number will store here</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Hearing Request Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>