force-app/main/default/objects/DocumentDetail__c/fields/Identity_Form_of_Proof__c.field-meta.xml
<CustomField>
    <fullName>Identity_Form_of_Proof__c</fullName>
    <inlineHelpText>Click here to see all forms of proof</inlineHelpText>
    <label>Identity Form of Proof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affidavit from non-US citizen</fullName>
            </value>
            <value>
                <fullName>Divorce Decree</fullName>
            </value>
            <value>
                <fullName>Drivers License</fullName>
            </value>
            <value>
                <fullName>Verified by DMV</fullName>
            </value>
            <value>
                <fullName>Verified by DPP</fullName>
            </value>
            <value>
                <fullName>Employee ID</fullName>
            </value>
            <value>
                <fullName>Federal Government issued ID</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>Immigration Document (Government Issued)</fullName>
            </value>
            <value>
                <fullName>Health Insurance Card</fullName>
            </value>
            <value>
                <fullName>High School or College Diploma</fullName>
            </value>
            <value>
                <fullName>Affidavit from US citizen</fullName>
            </value>
            <value>
                <fullName>Verified by IRS</fullName>
            </value>
            <value>
                <fullName>Verified by KTAP or Kinship Care</fullName>
            </value>
            <value>
                <fullName>Verified by Law enforcement</fullName>
            </value>
            <value>
                <fullName>Local Government Issued ID</fullName>
            </value>
            <value>
                <fullName>Marriage License</fullName>
            </value>
            <value>
                <fullName>Military Dependent&apos;s ID</fullName>
            </value>
            <value>
                <fullName>US Coast Guard Merchant Mariner card</fullName>
            </value>
            <value>
                <fullName>Certificate of US Citizenship (N-560 or N-561)</fullName>
            </value>
            <value>
                <fullName>Naturalization Certificate</fullName>
            </value>
            <value>
                <fullName>Property Deed or Title</fullName>
            </value>
            <value>
                <fullName>Award Letter</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Not verified</fullName>
            </value>
            <value>
                <fullName>Verified by residential care facility administration</fullName>
            </value>
            <value>
                <fullName>State Government Issued ID</fullName>
            </value>
            <value>
                <fullName>School Photo ID</fullName>
            </value>
            <value>
                <fullName>Verified by SNAP</fullName>
            </value>
            <value>
                <fullName>School Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>