force-app/main/default/objects/DocumentDetail__c/fields/IndividualId__c.field-meta.xml
<CustomField>
    <fullName>IndividualId__c</fullName>
    <description>Store the Individual Id of member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Individual Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>