force-app/main/default/objects/DocumentDetail__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related location record for the account object to which the document is uploaded</description>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Document Details</relationshipLabel>
    <relationshipName>Document_Details</relationshipName>
    <type>Lookup</type>
</CustomField>