force-app/main/default/objects/DocumentDetail__c/fields/MappingId__c.field-meta.xml
<CustomField>
    <fullName>MappingId__c</fullName>
    <description>Mapping Id will store as part of Document Upload Service</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mapping Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>