force-app/main/default/objects/DocumentDetail__c/fields/MimeType__c.field-meta.xml
<CustomField>
    <fullName>MimeType__c</fullName>
    <description>Document Mime Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mime Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>