force-app/main/default/objects/DocumentDetail__c/fields/Notification_Recipient_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Recipient_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notification Recipient Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>