force-app/main/default/objects/DocumentDetail__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>