force-app/main/default/objects/DocumentDetail__c/fields/ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>ReceivedDate__c</fullName>
    <description>Received Date Time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Received Date</label>
    <type>DateTime</type>
</CustomField>