force-app/main/default/objects/DocumentDetail__c/fields/RFIId__c.field-meta.xml
<CustomField>
    <fullName>RFIId__c</fullName>
    <description>Request for Information Id for which document is uploaded</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Request for Information Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>