force-app/main/default/objects/DocumentDetail__c/fields/SSP_Application__c.field-meta.xml
<CustomField>
    <fullName>SSP_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Application/Case record</description>
    <label>SSP Application</label>
    <referenceTo>SSP_Application__c</referenceTo>
    <relationshipLabel>Document Details</relationshipLabel>
    <relationshipName>Document_Details</relationshipName>
    <type>Lookup</type>
</CustomField>