force-app/main/default/objects/DocumentDetail__c/fields/SSP_Member__c.field-meta.xml
<CustomField>
    <fullName>SSP_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Member record</description>
    <label>SSP Member</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipLabel>Document Details</relationshipLabel>
    <relationshipName>Document_Details</relationshipName>
    <type>Lookup</type>
</CustomField>