force-app/main/default/objects/DocumentDetail__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>Status Code of the document when submitted to IEES</description>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>