force-app/main/default/objects/DocumentDetail__c/fields/TaskCode__c.field-meta.xml
<CustomField>
    <fullName>TaskCode__c</fullName>
    <description>Used to store the Task Code based on which BT Service will Invoke Task API for creating a Task for Worker</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TaskCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>