force-app/main/default/objects/DocumentDetail__c/fields/TypeOfDocumentProof__c.field-meta.xml
<CustomField>
    <fullName>TypeOfDocumentProof__c</fullName>
    <description>Type of document proof for RFI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of Document Proof</label>
    <length>50</length>
    <type>Text</type>
</CustomField>