force-app/main/default/objects/DocumentDetail__c/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <description>Used to store unique identifier for RFI</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>