force-app/main/default/objects/DocumentDetail__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>Used to store the username of the logged in user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>