force-app/main/default/objects/DocumentDetail__c/recordTypes/RE_Documents.recordType-meta.xml
<RecordType>
    <fullName>RE_Documents</fullName>
    <active>true</active>
    <description>This is used to store details of documents uploaded to RE.</description>
    <label>RE Documents</label>
</RecordType>