force-app/main/default/objects/DocumentDetail__c/recordTypes/SSP_Document.recordType-meta.xml
<RecordType>
    <fullName>SSP_Document</fullName>
    <active>true</active>
    <description>This is used to store details of documents uploaded to SSP.</description>
    <label>SSP Document</label>
</RecordType>